Finished it for now.

--- a/cloud.html
+++ b/cloud.html
@@ -42,34 +42,19 @@
 </nav>
 <!--Here's where the page starts-->
 <div class="main-text" style="text-align:center;padding-top:200px;color:white;">
-    <h1 style="font-size:70px;">Coming soon!</h1>
-    <h2 style="font-size:50px;">Come back soon to see this page active!</h2>
+    <h1 style="font-size:70px;">Orbit Cloud</h1>
+    <h2 style="font-size:50px;">A smart, cheap VPS. Coming soon!</h2>
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<div id="scrolldown" style="color:white;text-align:center;padding-top:50px;font-size:50px;">
+    <i class="fa fa-chevron-down"></i>
+    <h5><strong>Scroll down</strong></h5>
+</div>
+<div class="cloud-text" style="padding-top:600px;color:white;text-align:center;padding-bottom:100px;">
+    <h1>Orbit Cloud. A smart cloud, that belongs to you.</h1>
+    <p>The orbit cloud is a smart, reliable, cheap VPS hosting service that allows you to host, bots, websites, databases and much, much more.</p>
+    <h1 style="font-size:70px;padding-top:10px;"><strong>Coming soon!</strong></h1>
+</div>
+
 <!--Here's where it ends-->
 <!--Footer-->
 <footer class="page-footer blue center-on-small-only">
