--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
     <i class="fa fa-chevron-down"></i>
     <h5><strong>Scroll down</strong></h5>
 </div>
-<div id="about" style="padding-top:400px;text-align:center;color:white;padding-left:20px;padding-right:20px;">
+<div id="about" style="padding-top:600px;text-align:center;color:white;padding-left:20px;padding-right:20px;">
     <h1>What we do.</h1>
     <p style="font-size:18px;">We're coders, graphic designers, content creators and tech enthusiasts.</p>
     <p style="font-size:18px;">Through our sub-brands and Orbit itself, we create many different types of content and many different services.</p>
     <p style="font-size:18px;">Here, at the Orbit Network, we pride ourselves in having a creative mindset and using that creativity to make something amazing. Orbit is powered by you. Our community helps us grow. Our community builds useful, interesting and fast tools so that you, as a consumer, can use them for yourself.</p>
 </div>
-<div id="sub-brands" style="padding-top:100px;padding:10px;">
+<div id="sub-brands" style="padding-top:100px;padding-left:10px;padding-right:10px;">
     <h1 style="color:white;text-align:center;">Our sub-brands.</h1>
     <br>
-    <div class="boxes" style="display:flex;flex-direction:row;justify-content:center;align-items:center;">
+    <div class="boxes" style="display:flex;flex-direction:row;justify-content:center;align-items:center;padding-bottom:50px;">
         
         <div class="card card-body" style="width:500px;">
                     <h4 class="card-title">ChatterBox Games</h4>
