--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel='icon' href='img/logo.png' type='image/x-icon'>
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 
 <body>
@@ -59,7 +61,7 @@
     <br>
     <div class="boxes" style="display:flex;flex-direction:row;justify-content:center;align-items:center;padding-bottom:50px;">
         
-        <div class="card card-body" style="width:500px;">
+        <div class="card card-body" style="width:500px;height:150px;">
                     <h4 class="card-title">ChatterBox Games</h4>
                     <p class="card-text">ChatterBox Games is a group of gamers who make games for a cheap price.</p>
                     <div class="flex-row">
@@ -67,7 +69,7 @@
                     </div>
                 </div>
                 
-                <div class="card card-body" style="width:500px;margin-left:5px;margin-right:5px;">
+                <div class="card card-body" style="width:500px;margin-left:5px;margin-right:5px;height:150px;">
                         <h4 class="card-title">CBG Community</h4>
                         <p class="card-text">CBG Community is a small Discord server with just over 60 members.</p>
                         <div class="flex-row">
@@ -76,7 +78,7 @@
                         </div>
                     </div>
 
-                    <div class="card card-body" style="width:500px;">
+                    <div class="card card-body" style="width:500px;height:150px;">
                             <h4 class="card-title">HaiBot</h4>
                             <p class="card-text">HaiBot is a multi-function Discord bot fit for any server.</p>
                             <div class="flex-row">
