--- a/cloud.html
+++ b/cloud.html
@@ -14,6 +14,7 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel='icon' href='img/logo.png' type='image/x-icon'>
 </head>
 
 <body>
